--- a/Bevut/app/templates/app/login.html
+++ b/Bevut/app/templates/app/login.html
@@ -1,50 +1,46 @@
-{% extends "app/layout.html" %}
+{% extends "app/shared_layout.html" %}
 
-{% block content %}
-
-<h2>{{ title }}</h2>
-<div class="row">
-    <div class="col-md-8">
-        <section id="loginForm">
-            <form action="." method="post" class="form-horizontal">
+{% block body %}
+    <div class="container" style="padding-top: 40px">
+        <div class="row">
+            <form class="col s12 m8 offset-m2 l6 offset-l3" method="post">
                 {% csrf_token %}
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                <div class="form-group">
-                    <label for="id_username" class="col-md-2 control-label">User name</label>
-                    <div class="col-md-10">
-                        {{ form.username }}
+                <div class="card grey lighten-3">
+                    <div class="card-content black-text grey lighten-5">
+                        <div class="row">
+                            <div class="col s2">
+                                <img src="http://ki.se/sites/all/themes/ki/images/open_graph.png" class="responsive-img" alt="Logo"/>
+                            </div>
+                            <div class="col s10">
+                                <h5>Institutionen för hälsa och lärande</h5>
+                                <h6>Karolinska institutet</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-content black-text">
+                      {% if form.errors %}
+                        <div class="card-panel red darken-3 white-text">
+                            Ett fel inträffade vid inloggning. Var vänlig kontrollera dina kontouppgifter.
+                        </div>
+                      {% endif %}
+                      <span class="card-title">BeVut-Dig Inloggning</span>
+                      <div class="input-field">
+                            <input id="username" name="username" type="text" class="validate" />
+                            <label for="username">Användarnamn</label>
+                        </div>
+                        <div class="input-field">
+                            <input id="password" name="password" type="password" class="validate" />
+                            <label for="password">Lösenord</label>
+                        </div>
+                    </div>
+                    <div class="card-action right-align grey lighten-3">
+                        <input type="hidden" name="next" value="/app" />
+                        <button class="btn waves-effect waves-light" type="submit" name="action">Logga in
+                            <i class="material-icons right">send</i>
+                        </button>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="id_password" class="col-md-2 control-label">Password</label>
-                    <div class="col-md-10">
-                        {{ form.password }}
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="hidden" name="next" value="/" />
-                        <input type="submit" value="Log in" class="btn btn-default" />
-                    </div>
-                </div>
-                {% if form.errors %}
-                <p class="validation-summary-errors">Please enter a correct user name and password.</p>
-                {% endif %}
             </form>
-        </section>
+        </div>
     </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm"></section>
-    </div>
-</div>
-
-{% endblock %}
-
-
-{% block scripts %}
-
-    {% load staticfiles %}
-<script src="{% static 'app/scripts/jquery.validate.min.js' %}"></script>
-
 {% endblock %}
