--- a/Bevut/app/templates/app/index.html
+++ b/Bevut/app/templates/app/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container">
-    <h2>Klasser</h2>
+    <h2>Kurser</h2>
     <table class="striped">
         <thead>
             <tr>
@@ -15,7 +15,7 @@
         <tbody>
             {% for c in courses %}
             <tr>
-                <td><a href="/course/{{c.id}}">{{ c.name }}</a></td>
+                <td><a href="/app/course/{{c.id}}">{{ c.name }}</a></td>
                 <td>{{c.year}}</td>
                 <td>{{c.term}}</td>
                 <td>{{c.weeks}}v</td>
