--- a/Bevut/app/templates/app/navmenu.html
+++ b/Bevut/app/templates/app/navmenu.html
@@ -1,9 +1,9 @@
 ﻿{% if user.is_authenticated %}
     {% if user.is_staff %}
-    <li><a href="/admin">Administration</a></li>
+	<li><a href="{% url 'admin:index' %}">Administration</a></li>
     {% endif %}
     <li><a href="#">Klasser</a></li>
-    <li><a href="#">Logga ut</a></li>
+	<li><a href="{% url 'logout' %}">Logga ut</a></li>
 {% else %}
-    <li><a href="#">Logga in</a></li>
+	<li><a href="{% url 'login' %}">Logga in</a></li>
 {% endif %}
