--- a/Bevut/app/templates/app/app_layout.html
+++ b/Bevut/app/templates/app/app_layout.html
@@ -22,7 +22,7 @@
         <div class="col l6 s12">
           <h5 class="grey-text text-darken-3">Om BeVut-Dig</h5>
           <p class="grey-text text-darken-1">
-              BeVut-Dig är en digital tjänst för att hantera och bedöma studenter som utbildar sig inom sjukvård. Det bygger på bedömningsformuläret BeVut, och är anpassat för mobila enheter.
+              BeVut-Dig är en digital tjänst för att hantera och bedöma studenter som utbildar sig inom hälsa och sjukvård. Det bygger på bedömningsformuläret BeVut, och är anpassat för mobila enheter.
           </p>
 
 
@@ -35,7 +35,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container grey-text text-darken-2">
-      &copy; 2017 Hägg & Ulfvarson | Version 0.0.1
+      &copy; 2017 Jirwe & Ulfvarson | Version 0.0.1
       </div>
     </div>
   </footer>
