New way of displaying the forms in a non-table way

--- a/Bevut/app/templates/app/navmenu.html
+++ b/Bevut/app/templates/app/navmenu.html
@@ -2,7 +2,7 @@
     {% if user.is_staff %}
     <li><a href="/admin">Administration</a></li>
     {% endif %}
-    <li><a href="#">Klasser</a></li>
+    <li><a href="/app/">Kurser</a></li>
     <li><a href="#">Logga ut</a></li>
 {% else %}
     <li><a href="#">Logga in</a></li>
