--- a/Bevut/app/templates/app/form.html
+++ b/Bevut/app/templates/app/form.html
@@ -2,60 +2,119 @@
 {% load dict_tags %}
 {% block scripts %}
 <script>
-    $(function () {
-        $(".results input[type=hidden]").each(function() {
-            var value = $(this).val();
-            if (value === "")
-                return;
-            $(this).parent().children(".answer-box.set.result-" + value).addClass("selected");
-        });
+    $(function() {
+        $(".results input[type=hidden]")
+            .each(function() {
+                var value = $(this).val();
+                if (value === "")
+                    return;
+                $(this).parent().children(".answer-box.set.result-" + value).addClass("selected");
+            });
         $(".set")
-            .click(function () {
+            .click(function() {
                 $(this).parent().children(".answer-box.set").removeClass("selected");
                 var val = $(this).text();
                 $(this).parent().children("input[type=hidden]").val(val);
                 $(this).addClass("selected");
+            });
+        var $state = $("#state-holder");
+        {% if midterm_in_progress or fullterm_in_progress %}
+        $(".answer-box")
+            .click(function() {
+                $box = $(this);
+                $box.parent().find(".answer-box").removeClass("result-OK result-G result-V result-U result-VG");
+                var ans = $box.data("answer");
+                {% if midterm_in_progress %}
+                if (ans == "G")
+                    ans = "OK";
+                if (ans == "U")
+                    ans = "V";
+                {% endif %}
+                $box.parent().find("input[type=hidden]").val(ans);
+                $box.addClass("result-" + ans);
+            });
+        {% endif %}
+        $(".answer-box .toggle")
+            .click(function (event) {
+                event.stopPropagation();
+                $box = $(this).parent().parent();
+                if ($box.hasClass("collapsed")) {
+                    $box.removeClass("collapsed");
+                } else {
+                    $box.addClass("collapsed");
+                }
             });
     });
 </script>
 {% endblock %}
 {% block content %}
 <style>
+    .question {
+        margin-bottom: 40px;
+    }
+     .answer-done, .answer-not-done, .answer-well-done {
+         overflow: hidden;
+     }
+    .answer-done > div, .answer-not-done > div, .answer-well-done > div {
+    }
     .answer-box {
-        width: 60px;
-        height: 60px;
-        line-height: 60px;
-        font-size: 18px;
-        text-align: center;
-        color: white;
-    }
-    .result-V {
-        background-color: #ff9100;
-    }
-    .result-OK {
-        background-color: #aeea00;
-    }
-    .result-U {
-        background-color: #d50000;
-    }
-    .result-G {
-        background-color: #33691e;
-    }
-    .result-VG {
-        background-color: #01579b;
-    }
-    .answer-box.set {
-        opacity: 0.6;
+        padding: 10px;
         cursor: pointer;
     }
-    .answer-box.set:hover {
-        opacity: 0.8;
+    .answer-box.collapsed .description {
+        display: none;
     }
-    .answer-box.selected {
-        opacity: 1;
+    .answer-box.collapsed .desc:before {
+        content: "Klicka för beskrivning";
+    }
+    .answer-box .switch > i {
+        display: block;
+        width: 38px;
+        height: 38px;
+        line-height: 38px;
+        font-size: 24px;
+        text-align: center;
+        background-color: #ddd;
+        color: #333333;
     }
     .answer-box label {
-        color: white;
+        color: #666666;
+    }
+    .answer-box .row {
+        margin-bottom: 0px;
+    }
+    .result-V {
+        border: 6px dashed #da6464;
+    }
+    .result-OK {
+        border: 6px dashed #87c76e;
+        
+    }
+    .answer-box .text {
+        background-color: #FAFAFA;
+    }
+    .result-U {
+        border:6px solid #da6464;
+    }
+    .result-G {
+        border:6px solid #87c76e;
+    }
+    .result-VG {
+        border:6px solid #01579b;
+    }
+    .help-midterm {
+        border-top: 6px dashed #da6464;
+        border-left: 6px dashed #da6464;
+        border-bottom: 6px dashed #87c76e;
+        border-right: 6px dashed #87c76e;
+
+    }
+    .help-fullterm {
+        border-top: 6px solid #da6464;
+        border-left: 6px solid #da6464;
+        border-bottom: 6px solid #87c76e;
+        border-right: 6px solid #87c76e;
+
     }
     .number-box {
         width: 60px;
@@ -69,15 +128,16 @@
         vertical-align: top;
     }
     table tbody td p {
-        margin: 4px;
+        margin: 5px;
+        margin-top: 2px;
     }
-    table tbody tr:nth-child(even) td:nth-child(odd) {
+    /*table tbody tr:nth-child(even) td:nth-child(odd) {
         background-color: #eee;
         
     }
     table tbody tr:nth-child(odd) td:nth-child(even) {
         background-color: #eee;
-    }
+    }*/
     td.results, td.numbers {
         background-color: transparent !important;
         padding: 0px;
@@ -85,11 +145,10 @@
     }
 </style>
 
-<div class="container">
+<div id="state-holder" class="container {% if midterm_in_progress %}midterm{% endif %} {% if fullterm_in_progress %}fullterm{% endif %}">
     <h2>{{ student_form }}</h2>
     <div class="row">
-        <div class="col m6">
-            <div class="card-panel grey lighten-5">
+        <div class="col m6 s12">
                 <h5>Halvtidsbedömning</h5>
                 {% if student_form.midterm_signed %}
                 <h4>Slutförd</h4>
@@ -99,10 +158,8 @@
                 <h4>Ej genomförd</h4>
                 <a class="waves-effect waves-light btn" href="?term=midterm">Påbörja</a>
                 {% endif %}
-            </div>
         </div>
-        <div class="col m6">
-            <div class="card-panel grey lighten-5">
+        <div class="col m6 s12">
                 <h5>Heltidsbedömning</h5>
                 {% if student_form.fullterm_signed %}
                 <h4>Slutförd</h4>
@@ -115,102 +172,76 @@
                 Halvtidsbedöming inte klar
                 {% endif %}
                 {% endif %}
-            </div>
         </div>
     </div>
     <form method="POST">
     {% csrf_token %}
-    <div class="card-panel grey lighten-5">
-        <h5>Information</h5>
-        <div class="input-field">
-            <input id="ssn" type="text" value="{{ student_form.student.ssn }}">
-            <label for="ssn">Personnummer - kan ej ändras här</label>
+        <div class="card-panel grey lighten-5">
+            <h5>Information</h5>
+            <div class="input-field">
+                <input id="ssn" type="text" value="{{ student_form.student.ssn }}">
+                <label for="ssn">Personnummer - kan ej ändras här</label>
+            </div>
+            <div class="input-field">
+                <input id="location" type="text" name="location" class="validate" value="{{ student_form.location }}">
+                <label for="location">VFU-placering</label>
+            </div>
         </div>
-        <div class="input-field">
-            <input id="location" type="text" name="location" class="validate" value="{{ student_form.location }}">
-            <label for="location">VFU-placering</label>
+        <h3>Bedömning</h3>
+        <div class="row">
+            <div class="col s6">
+                <div class="card-panel grey lighten-5 help-midterm">Vid halvtidbedömning</div>
+            </div>
+            <div class="col s6">
+                <div class="card-panel grey lighten-5 help-fullterm">Vid heltidsbedömning</div>
+            </div>
         </div>
-    </div>
-    <table>
-        <thead>
-        <tr>
-            <th></th>
-            <th>
-                Lärandeaspekter
-            </th>
-            <th>
-                Kriterier för godkänt
-            </th>
-            {% if student_form.template.has_well_done %}
-            <th>
-                Kriterier för väl godkänt
-            </th>
-            {% endif %}
-            <th>
-                Kriterier för icke godkänt
-            </th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for question in student_form.template.formoption_set.all %}
-                
-        <tr>
-            <td class="numbers">
-                <div class="number-box">
-                    {{ question.nr }}
+        <div class="questions">
+            {% for question in student_form.template.formoption_set.all %}
+            {% with answer=current_answers|get_item:question.id %}
+            <div class="question">
+                 {% if midterm_in_progress %}
+                    <input type="hidden" name="{{question.id}}" value="{{ midterm_answers|get_item:question.id }}"/>
+                    {% endif %}
+                    {% if fullterm_in_progress %}
+                    <input type="hidden" name="{{question.id}}" value="{{ fullterm_answers|get_item:question.id }}"/>
+                    {% endif %}
+                <div class="number-box">{{question.nr}}</div>
+                <p class="flow-text">{{ question.description }}</p>
+                <div data-answer="G" class="card-panel grey lighten-5 collapsed answer-box{% if show_midterm_answer and midterm_answers|get_item:question.id == "OK"%} result-OK{%endif%}{% if answer == "OK" %} result-OK{%endif%}{% if answer == "G" %} result-G{%endif%}">
+                    <div class="row">
+                        <div class="col m4 s12 flow-text select">
+                            Godkänt
+                        </div>
+                        <div class="col m7 s10 desc"><div class="description">{{question.done_description}}</div></div>
+                        <div class="col m1 s2 switch toggle"><i class="material-icons">import_export</i></div>
+                    </div>
                 </div>
-            </td>
-            <td>
-                <p>{{ question.description }}</p></td>
-            <td>
-                <p>{{ question.done_description }}</p>
-
-            </td>
-            {% if student_form.template.has_well_done %}
-            <td>
-                <p>{{ question.well_done_description }}</p>
-            </td>
-            {% endif %}
-            <td>
-                <p>{{ question.not_done_description }}</p>
-            </td>
-            <td class="results">
-                {% if midterm_in_progress %}
-                <input type="hidden" name="{{question.id}}" value="{{ midterm_answers|get_item:question.id }}"/>
-                <div class="answer-box set result-OK">OK</div>
-                <div class="answer-box set result-V">V</div>
+                {% if student_form.template.has_well_done and not midterm_in_progress %}
+                <div data-answer="VG" class="card-panel grey lighten-5 answer-box{% if answer == "VG" %} result-VG{%endif%}">
+                    <div class="row">
+                        <div class="col m4 s12 flow-text select">
+                            Väl godkänt
+                        </div>
+                        <div class="col m7 s10 desc"><div class="description">{{question.well_done_description}}</div></div>
+                        <div class="col m1 s2 switch toggle"><i class="material-icons">import_export</i></div>
+                    </div>
+                </div>
                 {% endif %}
-                {% if fullterm_in_progress %}
-                <input type="hidden" name="{{question.id}}" value="{{ fullterm_answers|get_item:question.id }}"/>
-                {% if form.has_well_done %}
-                <div class="answer-box set result-VG">VG</div>
-                {% endif %}
-                <div class="answer-box set result-G">G</div>
-                <div class="answer-box set result-U">U</div>
-                <hr/>
-                {% endif %}
-                {% for a in question.formanswer_set.all %}
-                {% if a.result == "OK" and not midterm_in_progress %}
-                <div class="answer-box result-OK">OK</div>
-                {% endif %}
-                {% if a.result == "V" and not midterm_in_progress %}
-                <div class="answer-box result-V">V</div>
-                {% endif %}
-                {% if a.result == "U" and not fullterm_in_progress %}
-                <div class="answer-box result-U">U</div>
-                {% endif %}
-                {% if a.result == "G" and not fullterm_in_progress %}
-                <div class="answer-box result-G">G</div>
-                {% endif %}
-                {% if a.result == "VG" and not fullterm_in_progress %}
-                <div class="answer-box result-VG">VG</div>
-                {% endif %}
-                {% endfor %}
-            </td>
-        </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+                <div data-answer="U" class="card-panel grey lighten-5 answer-box {% if show_midterm_answer and midterm_answers|get_item:question.id == "V"%} result-V{%endif%}{% if answer == "V" %} result-V{%endif%}{% if answer == "U" %} result-U{%endif%}">
+                    <div class="row">
+                        <div class="col m4 s12 flow-text select">
+                            Underkänt
+                        </div>
+                        <div class="col m7 s10 desc"><div class="description">{{question.not_done_description}}</div></div>
+                        <div class="col m1 s2 switch toggle"><i class="material-icons">import_export</i></div>
+                    </div>
+                </div>
+            </div>
+            {% endwith %}
+            {% endfor %}
+        </div>
+ 
         {% if midterm_in_progress %}
         <div class="card-panel grey lighten-5">
             <h4>Halvtidsbedömning</h4>
