--- a/Bevut/app/templates/admin/app/student/change_list.html
+++ b/Bevut/app/templates/admin/app/student/change_list.html
@@ -2,6 +2,6 @@
 
 {% block object-tools-items %}
 	{{ block.super }}
-	<li><a class="addlink" href="{% url "admin:add_multiple_students" %}">Importera {{ cl.opts.verbose_name_plural }} från fil </a></li>
+	<li><a class="addlink" href="{% url "admin:add_multiple_students" %}">Importera {{ cl.opts.verbose_name_plural }}</a></li>
 {% endblock %}
 
