remove extra stuff

--- a/Bevut/app/templates/app/form.html
+++ b/Bevut/app/templates/app/form.html
@@ -240,7 +240,7 @@
             <h5>Information</h5>
             <div class="input-field">
                 <input disabled id="ssn" type="text" value="{{ student_form.student.ssn }}">
-                <label for="ssn">Personnummer - kan ej ändras här</label>
+                <label for="ssn">Personnummer</label>
             </div>
             <div class="input-field">
                 <input id="handler" type="text" name="handler" class="validate" value="{{ student_form.handler }}">
@@ -364,7 +364,7 @@
                     <div class="signing">
                         <div class="input-field">
                             <input disabled id="sign_date" type="text" class="validate" value="{{ todays_date }}">
-                            <label for="sign_date">Datum för signering - kan ej ändras</label>
+                            <label for="sign_date">Datum för signering</label>
                         </div>
                         <h5>Närvarande vid halvtidsbedömning</h5>
                         <div class="signers">
