--- a/Bevut/app/templates/app/form_readonly.html
+++ b/Bevut/app/templates/app/form_readonly.html
@@ -96,8 +96,6 @@
 
 <div id="state-holder" class="container {% if midterm_in_progress %}midterm{% endif %} {% if fullterm_in_progress %}fullterm{% endif %}">
     <h2>{{ student_form }}</h2>
-    <form method="POST">
-    {% csrf_token %}
         <div class="card-panel grey lighten-5">
             <h5>Information</h5>
             <div class="input-field">
@@ -112,9 +110,6 @@
                 <input id="location" type="text" name="location" class="validate" value="{{ student_form.location }}">
                 <label for="location">VFU-placering</label>
             </div>
-             <div class="input-field">
-                <input type="submit" value="Uppdatera" class="btn-large"/>
-            </div>
         </div>
         <h3>Bedömning</h3>
         <div class="row">
@@ -127,7 +122,6 @@
                 <h4>Påbörjad</h4>
                 {% else %}
                 <h4>Ej genomförd</h4>
-                <a class="waves-effect waves-light btn" href="?term=midterm">Påbörja</a>
                 {% endif %}
                 </div>
             </div>
@@ -140,7 +134,6 @@
                 <h4>Påbörjad</h4>
                 {% else %}
                 <h4>Ej genomförd</h4>
-                <a class="waves-effect waves-light btn" {% if not student_form.midterm_signed %}disabled{% endif %} href="?term=fullterm">Påbörja</a>
                 {% if not student_form.midterm_signed %}
                 Halvtidsbedöming inte klar
                 {% endif %}
@@ -168,7 +161,7 @@
                     {% endif %}
                 <div class="number-box">{{question.nr}}</div>
                 <p class="flow-text">{{ question.description }}</p>
-                <div data-answer="G" class="card-panel grey lighten-5 answer-box{% if show_midterm_answer and midterm_answers|get_item:question.id == "OK"%} result-OK{%endif%}{% if answer == "OK" %} result-OK{%endif%}{% if answer == "G" %} result-G{%endif%}{% if answer %} collapsed{% endif %}">
+                <div data-answer="G" class="card-panel grey lighten-5 answer-box{% if show_midterm_answer and midterm_answers|get_item:question.id == "OK"%} result-OK{%endif%}{% if answer == "OK" %} result-OK{%endif%}{% if answer == "G" %} result-G{%endif%}">
                     <div class="row">
                         <div class="col m4 s12 flow-text select">
                             Godkänt
@@ -202,7 +195,7 @@
             {% endfor %}
         </div>
  
-        {% if midterm_in_progress %}
+        {% if student_form.midterm_signed %}
         <div class="card-panel grey lighten-5">
             <h4>Halvtidsbedömning</h4>
             <div class="row">
@@ -230,26 +223,24 @@
                         </div>
                         <h5>Närvarande vid halvtidsbedömning</h5>
                         <div class="signers">
+                            {% for signer in student_form.midterm_user_sign %}
                             <div class="signer">
                                 <div class="row">
                                     <div class="col s6">
                                         <div class="input-field">
-                                            <input id="signer_name1" required type="text" name="signer_name" class="validate" value="">
+                                            <input id="signer_name1" required type="text" name="signer_name" class="validate" value="{{ signer.name }}">
                                             <label for="signer_name1">Namn på person</label>
                                         </div>
                                     </div>
-                                    <div class="col s5">
+                                    <div class="col s6">
                                         <div class="input-field">
-                                            <input id="signer_position1" required type="text" name="signer_position" class="validate" value="">
+                                            <input id="signer_position1" required type="text" name="signer_position" class="validate" value="{{ signer.title }}">
                                             <label for="signer_position1">Befattning</label>
-                                        </div>
-                                    </div>
-                                    <div class="col s1">
-                                        <div class="delete-btn"><i class="material-icons">close</i>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                            {% endfor %}
                         </div>
                         <a href="#" id="add_user"><i class="material-icons small">add</i> Lägg till fält</a>
                     </div>
@@ -260,7 +251,7 @@
             </div>
         </div>
         {% endif %}
-        {% if fullterm_in_progress %}
+        {% if student_form.fullterm_signed %}
         <div class="card-panel grey lighten-5">
             <h4>Heltidsbedömning</h4>
             <div class="row">
@@ -283,7 +274,7 @@
                 <div class="col s12">
                     <input type="hidden" name="term" value="fullterm"/>
                     <p class="checkbox">
-                        <input type="checkbox" name="sign" id="sign" value="true"/>
+                        <input type="checkbox" checked name="sign" id="sign" value="true"/>
                         <label for="sign">Slutför och signera heltidsbedömning</label>
                     </p>
                     <div class="signing">
@@ -291,19 +282,20 @@
                             <input disabled id="sign_date" type="text" class="validate" value="{{ todays_date }}">
                             <label for="sign_date">Datum för signering</label>
                         </div>
-                        <h5>Närvarande vid halvtidsbedömning</h5>
+                        <h5>Närvarande vid heltidsbedömning</h5>
                         <div class="signers">
+                            {% for signer in student_form.fullterm_user_signed %}
                             <div class="signer">
                                 <div class="row">
                                     <div class="col s6">
                                         <div class="input-field">
-                                            <input id="signer_name1" required type="text" name="signer_name" class="validate" value="">
+                                            <input id="signer_name1" required type="text" name="signer_name" class="validate" value="{{signer.name}}">
                                             <label for="signer_name1">Namn på person</label>
                                         </div>
                                     </div>
-                                    <div class="col s5">
+                                    <div class="col s6">
                                         <div class="input-field">
-                                            <input id="signer_position1" required type="text" name="signer_position" class="validate" value="">
+                                            <input id="signer_position1" required type="text" name="signer_position" class="validate" value="{{signer.title}}">
                                             <label for="signer_position1">Befattning</label>
                                         </div>
                                     </div>
@@ -313,8 +305,8 @@
                                     </div>
                                 </div>
                             </div>
+                            {% endfor %}
                         </div>
-                        <a href="#" id="add_user"><i class="material-icons small">add</i> Lägg till fält</a>
                     </div>
                     <div class="input-field">
                         <input type="submit" value="Uppdatera" class="btn-large"/>
@@ -323,6 +315,5 @@
             </div>
         </div>
         {% endif %}
-    </form>
 </div>
 {% endblock %}
